--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="src\render\controllers\ShadowController.h">
       <Filter>Header Files\render\controllers</Filter>
     </ClInclude>
+    <ClInclude Include="src\render\controllers\SkyboxController.h">
+      <Filter>Header Files\render\controllers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\render\EngineCanvas.cpp">
@@ -249,6 +252,9 @@
       <Filter>Source Files\render\controllers</Filter>
     </ClCompile>
     <ClCompile Include="src\render\controllers\ShadowController.cpp">
+      <Filter>Source Files\render\controllers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\controllers\SkyboxController.cpp">
       <Filter>Source Files\render\controllers</Filter>
     </ClCompile>
   </ItemGroup>
