--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="src\render\RenderableConfig.h">
       <Filter>Header Files\render</Filter>
     </ClInclude>
+    <ClInclude Include="src\render\CumulativeTexture.h">
+      <Filter>Header Files\render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\render\EngineCanvas.cpp">
@@ -274,6 +277,9 @@
     </ClCompile>
     <ClCompile Include="src\loaders\SceneLoader.cpp">
       <Filter>Source Files\loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\CumulativeTexture.cpp">
+      <Filter>Source Files\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\RenderTextureData.cpp">
       <Filter>Source Files\render</Filter>
