Split wireframe and normal model fragment shading into separate shader files

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -272,11 +272,12 @@
   <ItemGroup>
     <None Include="resources\shaders\default.frag" />
     <None Include="resources\shaders\default.vert" />
-    <None Include="resources\shaders\model.frag" />
     <None Include="resources\shaders\model.vert" />
+    <None Include="resources\shaders\model_normal.frag" />
     <None Include="resources\shaders\model_shadow.frag" />
     <None Include="resources\shaders\model_shadow.geom" />
     <None Include="resources\shaders\model_shadow.vert" />
+    <None Include="resources\shaders\model_wireframe.frag" />
     <None Include="resources\shaders\postprocess.frag" />
     <None Include="resources\shaders\postprocess.vert" />
   </ItemGroup>
