--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -200,6 +200,7 @@
     <None Include="resources\models\joining section.ply">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="resources\models\level.ply" />
     <None Include="resources\models\opened cube.ply">
       <DeploymentContent>true</DeploymentContent>
     </None>
