--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -274,10 +274,12 @@
     <None Include="resources\shaders\default.vert" />
     <None Include="resources\shaders\model.vert" />
     <None Include="resources\shaders\model_normal.frag" />
+    <None Include="resources\shaders\model_normal.geom" />
     <None Include="resources\shaders\model_shadow.frag" />
     <None Include="resources\shaders\model_shadow.geom" />
     <None Include="resources\shaders\model_shadow.vert" />
     <None Include="resources\shaders\model_wireframe.frag" />
+    <None Include="resources\shaders\model_wireframe.geom" />
     <None Include="resources\shaders\postprocess.frag" />
     <None Include="resources\shaders\postprocess.vert" />
   </ItemGroup>
