--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -27,11 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build gameengine
-        run: msbuild gameengine.sln -target:gameengine/gameengine_vcxproj
+        run: msbuild gameengine/gameengine.vcxproj
 
       # Runs a set of commands using the runners shell
       - name: Build gameengine-GTest
-        run: msbuild gameengine.sln -target:gameengine-GTest/gameengine-GTest_vcxproj
+        run: msbuild gameengine-GTest/gameengine-GTest.vcxproj
       
       - name: Run gameengine-GTest
         run: start "" "Debug/gameengine-GTest.exe"
