Added git commit ID to vcpkg installer

--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -28,6 +28,7 @@ jobs:
         uses: lukka/run-vcpkg@v5
         with:
           setupOnly: true
+          vcpkgGitCommitId: 4727bc86a
       # Now that vcpkg is installed, it is being used to run desired arguments.
       - run: $VCPKG_ROOT/vcpkg install @vcpkg_install.txt
         shell: bash
