Changed msbuild parameters

--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -51,13 +51,9 @@ jobs:
           path: /Debug/
           key: ${{ runner.os }}-binaries
 
-      # Runs a single command using the runners shell
-      - name: Build gameengine
-        run: msbuild gameengine/gameengine.vcxproj
-
       # Runs a set of commands using the runners shell
       - name: Build gameengine-GTest
-        run: msbuild gameengine-GTest/gameengine-GTest.vcxproj
+        run: msbuild gameengine.sln /t:gameengine-GTest /p:Configuration="Release" /p:Platform="x86"
       
       - name: Run gameengine-GTest
         run: "Debug/gameengine-GTest.exe"
