--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -39,12 +39,12 @@ jobs:
         shell: bash
       
       - run: echo if (PORT STREQUAL wxwidgets) set(VCPKG_LIBRARY_LINKAGE static) endif() > $VCPKG_ROOT/triplets/x86-windows.cmake
-        shell: bash
+        shell: cmd
         name: Make sure that wxWidgets builds statically
 
       # Now that vcpkg is installed, it is being used to run desired arguments.
       - run: $VCPKG_ROOT/vcpkg install @vcpkg_install.txt
-        shell: bash
+        shell: cmd
       
       - name: setup-msbuild
         uses: microsoft/setup-msbuild@v1
