--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -38,7 +38,7 @@ jobs:
       - run: $VCPKG_ROOT/vcpkg integrate install
         shell: bash
       
-      - run: echo if (PORT STREQUAL wxwidgets) set(VCPKG_LIBRARY_LINKAGE static) endif() > vcpkg/triplets/x86-windows.cmake
+      - run: echo if (PORT STREQUAL wxwidgets) set(VCPKG_LIBRARY_LINKAGE static) endif() >> vcpkg/triplets/x86-windows.cmake
         shell: cmd
         name: Make sure that wxWidgets builds statically
 
