--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -41,6 +41,7 @@ jobs:
       - run: |
           echo >> vcpkg/triplets/x86-windows.cmake
           echo if (PORT STREQUAL wxwidgets) set(VCPKG_LIBRARY_LINKAGE static) endif() >> vcpkg/triplets/x86-windows.cmake
+          echo >> vcpkg/triplets/x86-windows.cmake
         shell: cmd
         name: Make sure that wxWidgets builds statically
 
