--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -68,4 +68,5 @@ jobs:
         run: msbuild gameengine-GTest/gameengine-GTest.vcxproj
       
       - name: Run gameengine-GTest
-        run: "Debug/gameengine-GTest.exe"
+        run: "gameengine-GTest/Debug/gameengine-GTest.exe"
+        shell: cmd
