--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -68,5 +68,8 @@ jobs:
         run: msbuild gameengine-GTest/gameengine-GTest.vcxproj
       
       - name: Run gameengine-GTest
-        run: "gameengine-GTest/Debug/gameengine-GTest.exe"
+        run: |
+          cd gameengine-GTest
+          cd Debug
+          gameengine-GTest.exe
         shell: cmd
