--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -354,5 +354,8 @@
     <None Include="resources\shaders\model_wireframe.geom">
       <Filter>Resource Files\shaders</Filter>
     </None>
+    <None Include="resources\shaders\model_textured.frag">
+      <Filter>Resource Files\shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
