--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\generic\KDTree.h" />
+    <ClInclude Include="src\generic\std_glm.h" />
     <ClInclude Include="src\GLComponents.h" />
     <ClInclude Include="src\loaders\models\PlyLoader.h" />
     <ClInclude Include="src\loaders\SceneLoader.h" />
@@ -226,6 +227,7 @@
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\generic\KDTree.cpp" />
+    <ClCompile Include="src\generic\std_glm.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
     <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
     <ClCompile Include="src\loaders\SceneLoader.cpp" />
